<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Sunrise Sunset Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_current_location_sunrise_sunset_calcution">Sunrise Sunset Calculator</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="select_date">Select Date</string>
    <string name="current_location">My Current Location</string>
    <string name="point_on_map">Point on map</string>
    <string name="location_type_chooser_title">Select one:</string>
    <string name="calculate_sunrise_and_sunset">Calculate Sunrise and Sunset</string>
    <string name="title_activity_display_sun_calculation_results">Sunrise Sunset Calculator</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="_00_00">--:--</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="dawn">Dawn</string>
    <string name="dusk">Dusk</string>
    <string name="timeZone">Time Zone</string>
    <string name="title_activity_choose_location_from_map">Choose Location From Map</string>
    <string name="done">Done</string>
    <string name="country">Country</string>
    <string name="not_able_to_find">Unable to find</string>
    <string name="no_sun_rise_on_given_date">No sun rise on given date</string>
    <string name="no_sunset_on_given_date">No sunset on given date</string>
    <string name="locality">Locality</string>
    <string name="address">Address</string>
    <string name="no_dawn_on_given_date">No dawn on given date</string>
    <string name="no_dusk_on_given_date">No dusk on given date</string>
    <string name="no_nautical_dawn_on_given_date">No nautical dawn on given date</string>
    <string name="no_nautical_dusk_on_given_date">No nautical dusk on given date</string>
    <string name="no_astro_dawn_on_given_date">No astrological dawn on given date</string>
    <string name="no_astro_dusk_on_given_date">No astrological dusk on given date</string>
    <string name="nauticalDusk">Nautical Dusk</string>
    <string name="astroDusk">Astronomical Dusk</string>
    <string name="nauticalDawn">Nautical Dawn</string>
    <string name="astroDawn">Astronomical Dawn</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="title_activity_display_help">FAQ</string>
    
    <string name="dawnHelpQuestion">What is dawn?</string>

    <string-array name="dawnHelpAnswer">
        <item name="line1">Dawn is the time before sunrise after which there is enough light for objects to be distinguishable, so that outdoor activities can commence.</item>
        <item name="line2">In contrast, sunrise is the moment when the leading edge of the sun itself appears above the horizon.</item>
        <item name="line3">Theoretically, it is the time at which the sun rises to 6° below the horizon.</item>
    </string-array>

    <string name="duskHelpQuestion">What is dusk?</string>

    <string-array name="duskHelpAnswer">
        <item name="line1">Dusk is the time after sunset after which artificial illumination is required to read outside.</item>
        <item name="line2">In contrast, sunset is the point at which the earth has rotated enough that the sun is no longer visible from the local horizon.</item>
        <item name="line3">Theoretically, it is the time at which the sun sets to 6° below the horizon.</item>
    </string-array>
    
    
    <string name="nauticalDawnHelpQuestion">What is nautical dawn?</string>

    <string-array name="nauticalDawnHelpAnswer">
        <item name="line1">Nautical dawn is the time before sunrise at which there is just enough sunlight for the horizon and some objects to be distinguishable.</item>
        <item name="line2">Theoretically, it is the time at which the sun rises to 12° below the horizon.</item>
    </string-array>

    <string name="nauticalDuskHelpQuestion">What is nautical dusk?</string>

    <string-array name="nauticalDuskHelpAnswer">
        <item name="line1">Nautical dusk is the time after sunrise till which there is enough sunlight for the horizon and some objects to be distinguishable.</item>
        <item name="line2">Theoretically, it is the time at which the sun sets to 12° below the horizon.</item>
    </string-array>

    <string name="astroDawnHelpQuestion">What is astronomical dawn?</string>

    <string-array name="astroDawnHelpAnswer">
        <item name="line1">Astronomical dawn is the time before sunrise after which the sky is no longer complety dark.</item>
        <item name="line2">Theoretically, it is the time at which the sun rises to 18° below the horizon.</item>
    </string-array>

    <string name="astroDuskHelpQuestion">What is astronomical dusk?</string>

    <string-array name="astroDuskHelpAnswer">
        <item name="line1">Astronomical dusk is the time after sunrise after which the sky is completely dark.</item>
        <item name="line2">Theoretically, it is the time at which the sun sets to 18° below the horizon.</item>
    </string-array>
    <string name="menu_share_with_facebook">Share this app</string>

</resources>