<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sunriseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            android:minWidth="10dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sunriseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sunsetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sunsetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowDawn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dawnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dawn"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dawnTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowDusk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/duskLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dusk"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/duskTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRowTimezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/timezoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeZone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeZoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00" />
    </TableRow>
</TableLayout>