<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <com.google.ads.AdView
            android:id="@+id/displayResultAdView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="1541da331a7948d7"
            ads:loadAdOnCreate="true"
            android:layout_alignParentTop="true"
            ads:testDevices="TEST_EMULATOR, 304D19322A0A892F"
            android:minHeight="60dp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/padding_medium"
            android:text="@string/question"
            android:layout_below="@+id/displayResultAdView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/question"
            android:padding="@dimen/padding_medium"
            android:text="@string/answer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/answer"
            android:onClick="handleBackClick"
            android:text="@string/back" />

    </RelativeLayout>

</ScrollView>